--- a/resource/css/flag-types.css
+++ b/resource/css/flag-types.css
@@ -1,8 +1,12 @@
-.grid-flag-types tbody tr[x-status="false"] {
-	color: firebrick;
+.grid3 .master-detail-container {
+	background: white;
+	border: 1px solid silver;
 }
 
-.grid-flag-types tbody tr[x-status="true"] {
-	/*color: #2C80B3;*/
-	/*color: #27AE60;*/
+.grid3.flag-types .data-table .row[x-status="false"] {
+	color: red;
+}
+
+.grid3.flag-sub-types .data-table .row[x-status="0"] {
+	color: red;
 }
