--- a/resource/css/case-fees-types.css
+++ b/resource/css/case-fees-types.css
@@ -1,8 +1,3 @@
-.grid-case-fees-types tbody tr[x-status="false"] {
+.grid3.case-fees-types .data-table .row[x-status="false"] {
 	color: firebrick;
-}
-
-.grid-case-fees-types tbody tr[x-status="true"] {
-	/*color: #2C80B3;*/
-	/*color: #27AE60;*/
 }
