--- a/resource/css/auditlog-types.css
+++ b/resource/css/auditlog-types.css
@@ -1,8 +1,3 @@
-.grid-auditlog-types tbody tr[x-status="false"] {
-	color: firebrick;
-}
-
-.grid-auditlog-types tbody tr[x-status="true"] {
-	/*color: #2C80B3;*/
-	/*color: #27AE60;*/
+.grid3.auditlog-types .data-table .row[x-status="false"] {
+	color: red;
 }
