service status codes

--- a/resource/css/service-status-codes.css
+++ b/resource/css/service-status-codes.css
@@ -1,8 +1,12 @@
-.grid-service-status-codes tbody tr[x-status="0"] {
+.grid3 .master-detail-container {
+	background: white;
+	border: 1px solid silver;
+}
+
+.grid3.service-status-details .data-table .row[x-status="0"] {
 	color: blue;
 }
 
-.grid-service-status-codes tbody tr[x-status="1"] {
-	/*color: #2C80B3;*/
-	/*color: #27AE60;*/
+.grid3.service-status-details .data-table .row[x-active="0"] {
+	color: red;
 }
